# NL_DB_Q

./: .env.example  DATA_FLOW_DIAGRAM.md  README.md  main.py  nl2sql_metrics.json  pyproject.toml  readme.txt  requirement.txt
notebook/: 0.0-configuration-check.ipynb  1.0-database_connection.ipynb  1.1-database-wrapper.ipynb  1.2-database_connection.ipynb  1.3-multiple-database_connection.ipynb  2.1-agents.ipynb  2.2-agents.ipynb  3.0-tools.ipynb  4.1-nldbq-agent.ipynb  4.1-vector-agent.ipynb  4.2-nldbq-agent-ollama.ipynb  4.3-nldbq-agent.ipynb  4.4-nldbq-agent.ipynb  5.1-nl2sql-agent copy.ipynb  5.1-ollama-agent.ipynb  5.1-vector-agent.ipynb  6.0-comparision-llm-model.ipynb  6.1-comparision-llm-model-vector.ipynb  6.2-comparision-embeding-model.ipynb  8.1-langgraph-implementation.ipynb  8.2-langgraph-implementation.ipynb  9.0-langgraph-usage.ipynb
notebook/db_ollama_nomic/: index.faiss  index.pkl
notebook/db_openai_small/: index.faiss  index.pkl
notebook/schema_vector_db/: index.faiss  index.pkl
src/agent_workflow/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  config.py  example.py  main.py  monitoring.py  nodes.py  routers.py  state.py  workflow.py
src/agents/: __init__.py  agent.py  agent_factory.py  agent_manager.py  prompt.py  tools.py  vector_retriver_tools.py  vector_store.py
src/config/: __init__.py  constants.py  db_schema.py  logging_config.py  model_options.py  models.py  prompt.py  vector_config.py
src/db/: __init__.py  db_client.py  db_schema_wrapper.py
src/ui/: __init__.py  app.py  chat.py  config.py  dashboard.py  history.py  utils.py  (+2 more)
(+30 files in other folders)
