[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nldbq"
version = "0.1.0"
description = "Natural Language Database Querying prototype"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["nldbq", "langchain", "streamlit", "llm", "database", "sql"]

dependencies = [
    "python-dotenv",
    "sqlalchemy",
    "pyodbc",
    "pymysql",
    "psycopg2-binary",
    "pandas",
    "langchain",
    "langgraph",
    "streamlit",
    "openai",
    "chromadb"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
